# tooling_and_scheduling

./: .gitignore  pyproject.toml  requirements.txt  test_qubo.py
docs/: design.md  requirements.md  tasks.md
experiments/: classical_analysis.py
experiments/runs/: classical_baseline_results.csv  qaoa_results.csv
scripts/: quick_start.py
src/tooling_and_scheduling/: __init__.py  data_loader.py
src/tooling_and_scheduling.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tooling_and_scheduling/loaders/: __init__.py  starjob_loader.py
src/tooling_and_scheduling/models/: job_shop.py
src/tooling_and_scheduling/parsers/: job_shop_parser.py
src/tooling_and_scheduling/quantum/: __init__.py  metrics.py  qaoa_runner.py  qubo_builder.py
src/tooling_and_scheduling/solvers/: __init__.py  batch_processor.py  classical.py  classical_direct.py  quantum_qaoa.py  quantum_qubo.py
srcipts/: quick_start.py
tests/integration/: test_t1_t2_integration.py  test_t3_qubo_qaoa.py
tests/unit/: test_classical_solvers.py  test_data_loading.py  test_qubo_qaoa.py
